--- a/public/index.html
+++ b/public/index.html
@@ -6,33 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Clicky Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
-</html>
+      <div> == $0
+        <nav class="navbar">
+          <ul>
+            <li class="brand">
+              <a href="/">Clicky Game</a>
+            </li>
+            <li class>Click an image to begin!</li>
+            <li>
+              "Score: "
+              "0"
+              " | Top Score: "
+            </li>
+          </ul>
+        </nav>
+  <header class="header">
+     <h1>Clicky Game!</h1>
+     <h2>Click on image to earn points, but don't click the same image more than once! </h2>
+  </header>
+  <main class="container">
+    <div role="img" aria-label="click item"
+    class="click-item" style="background-image:
+    url("/assets/images/");"></div>
+     <div role="img" aria-label="click item"
+     class="click-item" style="background-image:
+     url("/assets/images/");"></div>
+      <div role="img" aria-label="click item"
+      class="click-item" style="background-image:
+      url("/assets/images/");"></div>
+       <div role="img" aria-label="click item"
+       class="click-item" style="background-image:
+       url("/assets/images/");"></div>
+        <div role="img" aria-label="click item"
+        class="click-item" style="background-image:
+        url("/assets/images/");"></div>
+         <div role="img" aria-label="click item"
+         class="click-item" style="background-image:
+         url("/assets/images/");"></div>
+          <div role="img" aria-label="click item"
+          class="click-item" style="background-image:
+          url("/assets/images/");"></div>
+           <div role="img" aria-label="click item"
+           class="click-item" style="background-image:
+           url("/assets/images/");"></div>
+            <div role="img" aria-label="click item"
+            class="click-item" style="background-image:
+            url("/assets/images/");"></div>
+             <div role="img" aria-label="click item"
+             class="click-item" style="background-image:
+             url("/assets/images/");"></div>
+              <div role="img" aria-label="click item"
+              class="click-item" style="background-image:
+              url("/assets/images/");"></div>
+               <div role="img" aria-label="click item"
+               class="click-item" style="background-image:
+               url("/assets/images/");"></div>
+  </main>
