--- a/public/index.html
+++ b/public/index.html
@@ -38,38 +38,38 @@
   <main class="container">
     <div role="img" aria-label="click item"
     class="click-item" style="background-image:
-    url("/assets/images/");"></div>
+    url("/assets/images/https://upload.wikimedia.org/wikipedia/en/thumb/0/02/Stewie_Griffin.png/220px-Stewie_Griffin.png");"></div>
      <div role="img" aria-label="click item"
      class="click-item" style="background-image:
-     url("/assets/images/");"></div>
+     url("/assets/images/https://upload.wikimedia.org/wikipedia/en/thumb/c/c2/Peter_Griffin.png/220px-Peter_Griffin.png");"></div>
       <div role="img" aria-label="click item"
       class="click-item" style="background-image:
-      url("/assets/images/");"></div>
+      url("/assets/images/https://upload.wikimedia.org/wikipedia/en/thumb/a/a5/Lois_Griffin.png/170px-Lois_Griffin.png");"></div>
        <div role="img" aria-label="click item"
        class="click-item" style="background-image:
-       url("/assets/images/");"></div>
+       url("/assets/images/https://upload.wikimedia.org/wikipedia/en/thumb/c/c7/Meg_Griffin.png/185px-Meg_Griffin.png");"></div>
         <div role="img" aria-label="click item"
         class="click-item" style="background-image:
-        url("/assets/images/");"></div>
+        url("/assets/images/https://upload.wikimedia.org/wikipedia/en/thumb/d/df/Chris_Griffin.png/220px-Chris_Griffin.png");"></div>
          <div role="img" aria-label="click item"
          class="click-item" style="background-image:
-         url("/assets/images/");"></div>
+         url("/assets/images/https://upload.wikimedia.org/wikipedia/en/thumb/1/12/Brian_Griffin.png/195px-Brian_Griffin.png");"></div>
           <div role="img" aria-label="click item"
           class="click-item" style="background-image:
-          url("/assets/images/");"></div>
+          url("/assets/images/https://upload.wikimedia.org/wikipedia/en/thumb/f/fe/Glenn_Quagmire.png/220px-Glenn_Quagmire.png");"></div>
            <div role="img" aria-label="click item"
            class="click-item" style="background-image:
-           url("/assets/images/");"></div>
+           url("/assets/images/https://vignette.wikia.nocookie.net/familyguy/images/9/9c/190px-Joe_Swanson.png/revision/latest?cb=20100326012234");"></div>
             <div role="img" aria-label="click item"
             class="click-item" style="background-image:
-            url("/assets/images/");"></div>
+            url("/assets/images/https://upload.wikimedia.org/wikipedia/en/e/e4/Cleveland_Brown.png");"></div>
              <div role="img" aria-label="click item"
              class="click-item" style="background-image:
-             url("/assets/images/");"></div>
+             url("/assets/images/https://vignette.wikia.nocookie.net/familyguy/images/d/d1/Herbert.JPG/revision/latest?cb=20060929205023");"></div>
               <div role="img" aria-label="click item"
               class="click-item" style="background-image:
-              url("/assets/images/");"></div>
+              url("/assets/images/https://upload.wikimedia.org/wikipedia/en/a/a3/Adam_West_on_Family_Guy.png");"></div>
                <div role="img" aria-label="click item"
                class="click-item" style="background-image:
-               url("/assets/images/");"></div>
+               url("/assets/images/https://oyster.ignimgs.com/mediawiki/apis.ign.com/family-guy/c/cf/Family-guy-Tricia-Takanawa-1.jpg");"></div>
   </main>
