added more info into the indexhtml

--- a/public/index.html
+++ b/public/index.html
@@ -72,4 +72,16 @@
                <div role="img" aria-label="click item"
                class="click-item" style="background-image:
                url("/assets/images/https://oyster.ignimgs.com/mediawiki/apis.ign.com/family-guy/c/cf/Family-guy-Tricia-Takanawa-1.jpg");"></div>
+    </div>
   </main>
+  <footer class="footer">
+    <div class ="bottom">
+      "Clicky Game!"
+      <img alt="react"src="assets/images/react.svg">
+    </div>
+   </footer>
+  </div>
+ </div>
+<script type="text/javaScript" src="https://d33wubrfki0168.cloudfront.net/js/69e9bb48.../static/js/main.322bad46.js"></script>
+</body>
+</html>
